# bsuir-ppois

./: README.md
1lab/: 1lab_PPOIS.cpp  1laba_PPOIS.cpp  LongInt.cpp  LongIntTest.cpp  Longint.cpp  Longint.h  test.cpp
2lab/: READme.md
2lab/main/: 2laba_PPOIS.cpp  Acetaminophen.h  Antigistat.h  Aspirin.h  Client.cpp  Client.h  Company.h  Diclofenac.h  Director.h  Headflex.h  Human.h  Ibyprofen.h  Ketorelac.h  Manager.cpp  Manager.h  Mig.h  Order.cpp  Order.h  RegistrationMenu.h  test.cpp
2lab/testResults/: index.html
2lab/testResults/Modules/: tests_for_2_lab.html
2lab/testResults/Modules/tests_for_2_lab/: Client.cpp.html  Company.h.html  Director.h.html  Human.h.html  Order.h.html
2lab/tests/: main_test.cpp  test_acetaminophen.cpp  test_antigistat.cpp  test_aspirin.cpp  test_client.cpp  test_company_and_director.cpp  test_diclofenac.cpp  test_headflex.cpp  test_ibyprofen.cpp  test_ketorelac.cpp  test_mig.cpp  test_order.cpp
3lab/main/: 3laba_PPOIS.cpp  Certificate.h  Comment.h  Contact.h  Course.cpp  Course.h  Employee.h  Human.cpp  Human.h  Manager.cpp  Manager.h  OnlinePlatform.h  Operator.cpp  Operator.h  Profession.h  Sale.h  Student.h  Teacher.h
3lab/tests/: test.cpp  test_course.cpp  test_platform.cpp  test_student.cpp  test_teacher.cpp
4lab/main/: CMakeLists.txt  EdgeIncidentIterator.h  EdgeIterator.h  OrientedGraph.cpp  OrientedGraph.h  VertexAdjacentIterator.h  VertexIterator.h  main.cpp
4lab/test/: testEdgeIncidentIterator.cpp  testEdgeIterator.cpp  testOrientedGraph.cpp  testVertexIterator.cpp
